# swagger.json
@@ -11,22 +11,65 @@
   },
   "servers": [
     {
-      "url": "http://localhost:3001/users",
-      "description": "API de teste"
+      "url": "https://projeto-03-m-03-xbm.onrender.com",
+      "description": "API no render"
     },
     {
-      "url": "https://projeto-03-m-03-xbm.onrender.com/users",
-      "description": "API de produção"
+      "url": "http://localhost:3001",
+      "description": "API local"
     }
   ],
   "paths": {
-    "/users/": {
-      "get": {
-        "summary": "Buscar todos os usuário",
-        "description": "Rota responsável por listar todos os usuários",
-        "tags": ["users"],
+    "/users/create": {
+      "post": {
+        "summary": "Criar um novo usuário",
+        "description": "Rota responsável por criar um novo usuário",
+        "tags": ["Users"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              },
+              "examples": {
+                "Users": {
+                  "value": {
+                    "name": "Cacau Lima",
+                    "username": "carlos-xbm",
+                    "email": "clima@gmail.com",
+                    "password": "12345",
+                    "avatar": "https://i.imgur.com/Ry1cb5M.png"
+                  }
+                }
+              }
+            }
+          }
+        },
         "responses": {
-          "404": {
+          "400": {
+            "description": "Not Found"
+          },
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/User"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/users": {
+      "get": {
+        "summary": "Buscar todos os usuários",
+        "description": "Rota responsável por buscar todos os usuários",
+        "tags": ["Users"],
+        "responses": {
+          "400": {
             "description": "Not Found"
           },
           "200": {
@@ -36,52 +79,8 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/users"
+                    "$ref": "#/components/schemas/User"
                   }
-                }
-              }
-            }
-          }
-        }
-      }
-    },
-    "/users/create": {
-      "post": {
-        "summary": "Criar um novo usuário",
-        "description": "Rota responsável por Criar um novo usuário",
-        "tags": ["users"],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/users"
-              },
-              "examples": {
-                "users": {
-                  "value": {
-                    "name": "Carlos Eduardo",
-                    "username": "xumbym",
-                    "email": "xumbym.18@gmail.com",
-                    "password": "1234",
-                    "avatar": "dsdsf",
-                    "required": true
-                  }
-                }
-              }
-            }
-          }
-        },
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          },
-          "201": {
-            "description": "Created",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "object",
-                  "$ref": "#/components/schemas/users"
                 }
               }
             }
@@ -91,13 +90,169 @@
     },
     "/auth/login": {
       "post": {
-        "summary": "Entrar na API do Rick and Morty",
-        "description": "Rota responsável por Entrar na API do Rick and Morty",
+        "summary": "Entrar no Twitter",
+        "description": "Rota responsável fazer o login de um user cadastrado",
         "tags": ["Auth"],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/User"
+              },
+              "examples": {
+                "User": {
+                  "value": {
+                    "email": "clima@gmail.com",
+                    "password": "12345"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK"
+          }
+        }
+      }
+    },
+    "/character/create": {
+      "post": {
+        "summary": "Criar um novo personagem",
+        "description": "Rota responsável por criar um novo personagem",
+        "tags": ["Character"],
+        "security": [{ "bearerAuth": [] }],
+        "requestBody": {
+          "content": {
+            "application/json": {
+              "schema": {
+                "$ref": "#/components/schemas/character"
+              },
+              "examples": {
+                "character": {
+                  "value": {
+                    "user": "",
+                    "characterNome": "Rick",
+                    "urlDaImagem": "http://dsfdsf"
+                  }
+                }
+              }
+            }
+          }
+        },
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "201": {
+            "description": "Created",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "$ref": "#/components/schemas/Tweet"
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/characters": {
+      "get": {
+        "summary": "Buscar todos os personagens",
+        "description": "Rota responsável por buscar todos os personagens",
+        "tags": ["Character"],
+        "security": [{ "bearerAuth": [] }],
         "parameters": [
           {
-            "email": "xumbym.18@gmail.com",
-            "password": "1234",
+            "in": "query",
+            "characterName": "limit",
+            "type": "string"
+          },
+          {
+            "in": "query",
+            "characterName": "offset",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/character"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/characters/find/id": {
+      "get": {
+        "summary": "Buscar  personagens",
+        "description": "Rota responsável por buscar  personagens",
+        "tags": ["Character"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id do personagem para a busca",
+            "required": true
+          }
+        ],
+        "responses": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
+            "description": "Not Found"
+          },
+          "200": {
+            "description": "OK",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "$ref": "#/components/schemas/character"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/character/update/{id}": {
+      "put": {
+        "summary": "Editar um personagem pelo ID",
+        "description": "Rota responsável por editar um personagem pelo ID",
+        "tags": ["Character"],
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "description": "Id do personagem para a busca",
             "required": true
           }
         ],
@@ -105,13 +260,13 @@
           "content": {
             "application/json": {
               "schema": {
-                "$ref": "#/components/schemas/users"
+                "$ref": "#/components/schemas/character"
               },
               "examples": {
                 "Paletas": {
                   "value": {
-                    "email": "xumbym.18@gmail.com",
-                    "password": "1234"
+                    "characterNome": "Limão Editado",
+                    "urlDaImagem": "http://sdsds"
                   }
                 }
               }
@@ -128,7 +283,7 @@
               "application/json": {
                 "schema": {
                   "type": "object",
-                  "$ref": "#/components/schemas/users"
+                  "$ref": "#/components/schemas/character"
                 }
               }
             }
@@ -136,16 +291,16 @@
         }
       }
     },
-    "/delete-paleta/{id}": {
+    "/character/delete/{id}": {
       "delete": {
-        "summary": "Apagar uma paleta pelo ID",
-        "description": "Rota responsável por apagar uma paleta pelo ID",
-        "tags": ["Paletas"],
+        "summary": "Apagar um personagem pelo ID",
+        "description": "Rota responsável por apagar um personagem pelo ID",
+        "tags": ["Character"],
         "parameters": [
           {
             "name": "id",
             "in": "path",
-            "description": "Id da paleta para deleção",
+            "description": "Id do personagem para deleção",
             "required": true
           }
         ],
@@ -159,13 +314,26 @@
         }
       }
     },
-    "/all-carrinho": {
+
+    "/character/search": {
       "get": {
-        "summary": "Lista de todos os itens do carrinho",
-        "description": "Rota responsável por listar todos os itens do carrinho",
-        "tags": ["Carrinho"],
+        "summary": "Buscar personagem por nome",
+        "description": "Rota responsável por buscar os personagem por nome",
+        "tags": ["Character"],
+        "security": [{ "bearerAuth": [] }],
+        "parameters": [
+          {
+            "in": "query",
+            "name": "characterNome",
+            "type": "string",
+            "required": true
+          }
+        ],
         "responses": {
-          "404": {
+          "401": {
+            "description": "Unauthorized"
+          },
+          "400": {
             "description": "Not Found"
           },
           "200": {
@@ -175,7 +343,7 @@
                 "schema": {
                   "type": "array",
                   "items": {
-                    "$ref": "#/components/schemas/Carrinho"
+                    "$ref": "#/components/schemas/character"
                   }
                 }
               }
@@ -184,86 +352,44 @@
         }
       }
     },
-    "/create-carrinho": {
-      "post": {
-        "summary": "Cadastrar vários itens no carrinho",
-        "description": "Rota responsável por cadastrar vários itens no carrinho",
-        "tags": ["Carrinho"],
-        "requestBody": {
-          "content": {
-            "application/json": {
-              "schema": {
-                "$ref": "#/components/schemas/Carrinho"
-              },
-              "examples": {
-                "Carrinho": {
-                  "value": [
-                    {
-                      "paletaId": "624230fdcd38269205c82197",
-                      "quantidade": 5
-                    },
-                    {
-                      "paletaId": "62423c1e618f4a4738a5ee75",
-                      "quantidade": 2
-                    }
-                  ]
-                }
-              }
+    "components": {
+      "securitySchemes": {
+        "bearerAuth": {
+          "type": "http",
+          "scheme": "bearer",
+          "bearerFormat": "JWT"
+        }
+      },
+      "schemas": {
+        "User": {
+          "type": "object",
+          "properties": {
+            "name": {
+              "type": "string"
+            },
+            "username": {
+              "type": "string"
+            },
+            "email": {
+              "type": "string"
+            },
+            "password": {
+              "type": "string"
+            },
+            "avatar": {
+              "type": "string"
             }
           }
         },
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          },
-          "201": {
-            "description": "Created",
-            "content": {
-              "application/json": {
-                "schema": {
-                  "type": "array",
-                  "items": {
-                    "$ref": "#/components/schemas/Carrinho"
-                  }
-                }
-              }
+        "character": {
+          "type": "object",
+          "properties": {
+            "characterNome": {
+              "type": "string"
+            },
+            "urlDaImagem": {
+              "type": "string"
             }
-          }
-        }
-      }
-    },
-    "/finish-carrinho": {
-      "delete": {
-        "summary": "Apagar todos os itens do carrinho",
-        "description": "Rota responsável por apagar todos os itens do carrinho",
-        "tags": ["Carrinho"],
-        "responses": {
-          "400": {
-            "description": "Bad Request"
-          },
-          "200": {
-            "description": "OK"
-          }
-        }
-      }
-    }
-  },
-  "components": {
-    "schemas": {
-      "Paletas": {
-        "type": "object",
-        "properties": {
-          "sabor": {
-            "type": "string"
-          },
-          "descricao": {
-            "type": "string"
-          },
-          "foto": {
-            "type": "string"
-          },
-          "preco": {
-            "type": "number"
           }
         }
       }
